[package]
name = "kartevonmorgen"
description = "Karte von morgen"
version = "0.2.0-dev"
authors = [
  "slowtec GmbH <post@slowtec.de>",
  "Contributors of Karte von morgen"
]
edition = "2018"
repository = "https://github.com/kartevonmorgen/kartevonmorgen"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1"
ofdb-boundary = { version = "*", features = ["extra-derive"] }
seed = "0.5"
wasm-bindgen = "0.2"

[patch.crates-io.ofdb-boundary]
git = "https://github.com/kartevonmorgen/openfairdb"
branch = "boundary"

### JS DEPENDENCIES ###

# TODO: "acorn": "^6.0.4",
# TODO: "i18next": "^10.6.0",
# TODO: "i18next-browser-languagedetector": "^2.2.3",
# TODO: "leaflet": "^1.4.0",
# TODO: "museo": "^0.1.0",
# TODO: "purecss": "^1.0.0",
# TODO: "react-i18next": "^7.13.0",
# TODO: "react-leaflet": "^2.2.0",
# TODO: "react-loaders-spinners": "^0.4.0",
# TODO: "react-select": "^2.4.0",
# TODO: "react-swipeable": "^4.3.0",
# TODO: "react-tooltip": "^3.9.0",
# TODO: "react-virtualized-select": "^3.1.3",
# TODO: "react-vm-flower": "^0.2.1",
# TODO: "reapop": "^2.0.1",
# TODO: "reapop-theme-wybo": "^1.0.2",
# TODO: "redux-form": "^8.1.0",
# TODO: "redux-logger": "^3.0.6",
# TODO: "source-sans-pro": "^2.40.0",
# TODO: "vm-leaflet-icons": "^0.1.0"

### JS DEPENDENCIES ###

# TODO: "acorn-jsx": "^5.0.0",
# TODO: "chai": "^3.5.0",
# TODO: "debug": "^4.1.0",
# TODO: "karma": "^3.1.1",
# TODO: "karma-chai": "^0.1.0",
# TODO: "karma-chrome-launcher": "^2.2.0",
# TODO: "karma-mocha": "^1.3.0",
# TODO: "karma-mocha-reporter": "^2.2.5",
# TODO: "mocha": "^5.2.0",
# TODO: "redbox-react": "^1.6.0",

### JS SCRIPTS ###

# TODO: "start": "NODE_ENV=development webpack-dev-server --progress --host 0.0.0.0 --hot --https"
